tests/snapshots/r#mod__parser__ical_export.snap
---
source: tests/mod.rs
expression: export
---
BEGIN:VCALENDAR
VERSION:2.0
PRODID:ical-rs test
CALSCALE:GREGORIAN
BEGIN:VTIMEZONE
TZID:Europe/Berlin
X-LIC-LOCATION:Europe/Berlin
BEGIN:DAYLIGHT
TZNAME:CEST
TZOFFSETFROM:+0100
TZOFFSETTO:+0200
DTSTART:19810329T020000
RRULE:FREQ=YEARLY;UNTIL=20370329T010000Z;BYDAY=-1SU;BYMONTH=3
END:DAYLIGHT
BEGIN:STANDARD
TZNAME:CET
TZOFFSETFROM:+0200
TZOFFSETTO:+0100
DTSTART:19961027T030000
RRULE:FREQ=YEARLY;UNTIL=20361026T010000Z;BYDAY=-1SU;BYMONTH=10
END:STANDARD
END:VTIMEZONE
BEGIN:VTIMEZONE
TZID:W. Europe Standard Time
BEGIN:STANDARD
DTSTART:16011028T030000
RRULE:FREQ=YEARLY;BYDAY=-1SU;BYMONTH=10
TZOFFSETFROM:+0200
TZOFFSETTO:+0100
END:STANDARD
BEGIN:DAYLIGHT
DTSTART:16010325T020000
RRULE:FREQ=YEARLY;BYDAY=-1SU;BYMONTH=3
TZOFFSETFROM:+0100
TZOFFSETTO:+0200
END:DAYLIGHT
END:VTIMEZONE
BEGIN:VEVENT
UID:fa915b604e6e3f36772501ff869439e6a3c5cf67
DTSTAMP:20250726T112617Z
DTSTART;VALUE=DATE:20250806
DTEND;VALUE=DATE:20250807
SEQUENCE:2
SUMMARY:all day event
TRANSP:OPAQUE
CLASS:PUBLIC
CREATED:20250726T144426Z
LAST-MODIFIED:20250726T144426Z
END:VEVENT
BEGIN:VEVENT
CLASS:PUBLIC
CREATED:20210511T063845Z
DESCRIPTION:Einwahldaten folgen in der Veranstaltungswoche \nSeminartitel:S
 oftware-QS-Cast - Application Performance Monitoring\nDatum: 27.Mai 2021\n
 Uhrzeit: 10:30 - ca.12:00 Uhr  \n \n
DTEND;TZID=W. Europe Standard Time:20210527T120000
DTSTAMP:20210511T063845Z
DTSTART;TZID=W. Europe Standard Time:20210527T103000
LAST-MODIFIED:20210511T063845Z
PRIORITY:5
SEQUENCE:0
SUMMARY;LANGUAGE=de:Software-QS-Cast Application Performance Monitoring
TRANSP:OPAQUE
UID:040000008200E000*************00800000000*****************00000000000000
 010000000********************************
X-MICROSOFT-CDO-BUSYSTATUS:BUSY
X-MICROSOFT-CDO-IMPORTANCE:1
X-MICROSOFT-DISALLOW-COUNTER:FALSE
X-MS-OLK-CONFTYPE:0
BEGIN:VALARM
TRIGGER:-PT15M
ACTION:DISPLAY
DESCRIPTION:Reminder
END:VALARM
END:VEVENT
BEGIN:VEVENT
UID:eb93535004f863c4e7a39b8b18daa6db3b353348
DTSTAMP:20250723T191244Z
DTSTART;TZID=Europe/Berlin:20250723T210000
DTEND;TZID=Europe/Berlin:20250723T212500
SEQUENCE:2
SUMMARY:something with rrule
TRANSP:OPAQUE
CLASS:PUBLIC
CREATED:20250723T191256Z
LAST-MODIFIED:20250723T191256Z
END:VEVENT
END:VCALENDAR
