tests/snapshots/r#mod__parser__ical_multiple-3.snap
---
source: tests/mod.rs
expression: cal
---
IcalCalendar {
    properties: [
        ContentLine {
            name: "CALSCALE",
            params: ContentLineParams(
                [],
            ),
            value: Some(
                "GREGORIAN",
            ),
        },
        ContentLine {
            name: "PRODID",
            params: ContentLineParams(
                [],
            ),
            value: Some(
                "-//Example Inc.//Example Calendar//EN",
            ),
        },
        ContentLine {
            name: "VERSION",
            params: ContentLineParams(
                [],
            ),
            value: Some(
                "2.0",
            ),
        },
    ],
    events: [
        IcalEvent {
            uid: "4088E990AD89CB3DBB484909",
            dtstamp: IcalDTSTAMPProperty(
                DateTime(
                    CalDateTime(
                        2008-02-05T19:12:24Olson(
                            UTC,
                        ),
                    ),
                ),
                ContentLineParams(
                    [],
                ),
            ),
            dtstart: IcalDTSTARTProperty(
                Date(
                    CalDate(
                        2008-10-06,
                        Local,
                    ),
                ),
                ContentLineParams(
                    [
                        (
                            "VALUE",
                            [
                                "DATE",
                            ],
                        ),
                    ],
                ),
            ),
            dtend: None,
            duration: None,
            rdates: [],
            rrules: [],
            exdates: [],
            exrules: [],
            recurid: None,
            properties: [
                ContentLine {
                    name: "DTSTAMP",
                    params: ContentLineParams(
                        [],
                    ),
                    value: Some(
                        "20080205T191224Z",
                    ),
                },
                ContentLine {
                    name: "DTSTART",
                    params: ContentLineParams(
                        [
                            (
                                "VALUE",
                                [
                                    "DATE",
                                ],
                            ),
                        ],
                    ),
                    value: Some(
                        "20081006",
                    ),
                },
                ContentLine {
                    name: "SUMMARY",
                    params: ContentLineParams(
                        [],
                    ),
                    value: Some(
                        "Missing description value, but includes header",
                    ),
                },
                ContentLine {
                    name: "DESCRIPTION",
                    params: ContentLineParams(
                        [],
                    ),
                    value: None,
                },
                ContentLine {
                    name: "UID",
                    params: ContentLineParams(
                        [],
                    ),
                    value: Some(
                        "4088E990AD89CB3DBB484909",
                    ),
                },
            ],
            alarms: [],
        },
    ],
    alarms: [],
    todos: [],
    journals: [],
    free_busys: [],
    vtimezones: [],
}
