tests/snapshots/r#mod__parser__ical_special_symbols.snap
---
source: tests/mod.rs
expression: cal
---
IcalCalendar {
    properties: [
        ContentLine {
            name: "CALSCALE",
            params: [],
            value: Some(
                "GREGORIAN",
            ),
        },
        ContentLine {
            name: "PRODID",
            params: [],
            value: Some(
                "-//Ximian//NONSGML Evolution Calendar//EN",
            ),
        },
        ContentLine {
            name: "VERSION",
            params: [],
            value: Some(
                "2.0",
            ),
        },
    ],
    events: [
        IcalEvent {
            uid: "fa915b604e6e3f36772501ff869439e6a3c5cf67",
            properties: [
                ContentLine {
                    name: "UID",
                    params: [],
                    value: Some(
                        "fa915b604e6e3f36772501ff869439e6a3c5cf67",
                    ),
                },
                ContentLine {
                    name: "DTSTAMP",
                    params: [],
                    value: Some(
                        "20250726T112617Z",
                    ),
                },
                ContentLine {
                    name: "DTSTART",
                    params: [
                        (
                            "VALUE",
                            [
                                "DATE",
                            ],
                        ),
                    ],
                    value: Some(
                        "20250806",
                    ),
                },
                ContentLine {
                    name: "DTEND",
                    params: [
                        (
                            "VALUE",
                            [
                                "DATE",
                            ],
                        ),
                    ],
                    value: Some(
                        "20250807",
                    ),
                },
                ContentLine {
                    name: "SEQUENCE",
                    params: [],
                    value: Some(
                        "2",
                    ),
                },
                ContentLine {
                    name: "SUMMARY",
                    params: [
                        (
                            "X-ASD",
                            [
                                "ähm",
                            ],
                        ),
                    ],
                    value: Some(
                        "sönderzaichän :))",
                    ),
                },
                ContentLine {
                    name: "X-YEET",
                    params: [
                        (
                            "X-ASD",
                            [
                                "äh,,m",
                            ],
                        ),
                    ],
                    value: Some(
                        "sönderzaichän :))",
                    ),
                },
                ContentLine {
                    name: "TRANSP",
                    params: [],
                    value: Some(
                        "OPAQUE",
                    ),
                },
                ContentLine {
                    name: "CLASS",
                    params: [],
                    value: Some(
                        "PUBLIC",
                    ),
                },
                ContentLine {
                    name: "CREATED",
                    params: [],
                    value: Some(
                        "20250726T144426Z",
                    ),
                },
                ContentLine {
                    name: "LAST-MODIFIED",
                    params: [],
                    value: Some(
                        "20250726T144426Z",
                    ),
                },
            ],
            alarms: [],
        },
    ],
    alarms: [],
    todos: [],
    journals: [],
    free_busys: [],
    vtimezones: [],
}
