tests/snapshots/r#mod__parser__vcard_lowercase.snap
---
source: tests/mod.rs
expression: card
---
VcardContact {
    properties: [
        ContentLine {
            name: "version",
            params: [],
            value: Some(
                "4.0",
            ),
        },
        ContentLine {
            name: "fn",
            params: [],
            value: Some(
                "Alice Foobar",
            ),
        },
        ContentLine {
            name: "n",
            params: [],
            value: Some(
                "Foobar;Alice",
            ),
        },
        ContentLine {
            name: "email",
            params: [
                (
                    "TYPE",
                    [
                        "internet",
                    ],
                ),
            ],
            value: Some(
                "alice@example.org",
            ),
        },
    ],
}
